fix blog overflow images + nicer 404 (not finished)

--- a/src/assets/scss/templates/_page-post.scss
+++ b/src/assets/scss/templates/_page-post.scss
@@ -135,6 +135,10 @@
     }
   }
 
+  [id*="attachment_"] {
+    width: 100% !important;
+  }
+
   ol {
     li {
       padding: 8px 0;
